--- a/templates/base.html
+++ b/templates/base.html
@@ -38,31 +38,6 @@
 
     <body>
 
-        <!-- Start Preloader Area -->
-        <div class="preloader">
-            <h2 class="loader">Loading...</h2>
-        </div>
-        <!-- End Preloader Area -->
-
-        <!-- Start Navbar Area -->
-        <div class="navbar-area">
-            <div class="labto-mobile-nav">
-                <div class="logo">
-                    Becteria Image clissicter
-                </div>
-            </div>
-
-            <div class="labto-nav">
-                <div class="container">
-                    <nav class="navbar navbar-expand-md navbar-light">
-                        becteria image class
-
-                    </nav>
-                </div>
-            </div>
-        </div>
-        <!-- End Navbar Area -->
-
         {% block content %}
         {% endblock %}
 
@@ -74,17 +49,8 @@
                 <div class="copyright-area">
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <p><a href="https://envytheme.com/" target="_blank">Ez Lab</a> © 2019. All rights reserved.</p>
-                        </div>
-
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <ul>
-                                <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                            </ul>
+                            <p>JU Bhaderwah Campus
+                            </p>
                         </div>
                     </div>
                 </div>
