--- a/templates/error.html
+++ b/templates/error.html
@@ -32,7 +32,7 @@
         <!-- Responsive CSS -->
         <link rel="stylesheet" href="assets/css/responsive.css">
 
-        <title>Labto - Laboratory & Research HTML Template</title>
+        <title>Project</title>
 
         <link rel="icon" type="image/png" href="assets/img/favicon.png">
     </head>
@@ -52,11 +52,8 @@
                     <div class="container">
                         <div class="error-content">
                             <img src="assets/img/404.png" alt="error">
-        
-                            <h3>Page Not Found</h3>
-                            <p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
-        
-                            <a href="index.html" class="btn btn-secondary">Go to Home</a>
+                            <h3>Page Not Found</h3>      
+                            <a href="home.html" class="btn btn-secondary">Go to Home</a>
                         </div>
                     </div>
                 </div>
