--- a/templates/home.html
+++ b/templates/home.html
@@ -8,40 +8,41 @@
         <div class="page-title-area">
             <div class="container">
                 <div class="page-title-content">
-                    <h2>Bacteria Species or Genera Detection</h2>
+                    <h2>Bacteria Species Detection</h2>
                 </div>
             </div>
         </div>
         <!-- End Page Title Area -->
 
-        <!-- Start Services Details Area -->
-        <section class="services-details-area ptb-120">
-            <div class="container">
+        <!-- Start Page body Area -->
+        <div class="page-body-area">
+
+            <div class="container ptb-120">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <div class="services-details">
-                            <img src="{% static 'img/bacteria-abstract.jpg' %}" alt="image">
-
+                            <img src="{% static 'img/bacteria.jpg' %}" alt="image" width="600" 
+                            height="450">
+                            
                             {% if not result %}
-
+                            
                             <form id="" method="post" enctype="multipart/form-data" novalidate="true"  style="margin-top: 20px;">
                                 
                                 <h3>Upload image to predict the name of bacteria species.</h3>
-
-
-
-
+                                
+                                
+                                
+                                
                                 {% csrf_token %}
-
+                                
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6">
-
+                                        
                                         <div class="form-group">
                                             <input type="file" class="form-control" placeholder="Your Name" name="myfile" id="name" required="" data-error="Please enter your name">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
-                
                                     
                                     <div class="col-lg-12 col-md-12">
                                         <button type="submit" class="btn btn-primary" style="pointer-events: all; cursor: pointer;">Predict Species</button>
@@ -51,18 +52,18 @@
                                 </div>
                             </form>
                             {% else %}
-                                <h3  style="margin-top: 20px;border-bottom: 5px dashed #e3e3e3;padding-bottom: 10px;">Analysis Report:</h3>
-
-                                <p>Predicted Bacteria Species/Genera: <strong>{{ result }}</strong></p>
-
-                                
-
+                            <h3  style="margin-top: 20px;border-bottom: 5px dashed #e3e3e3;padding-bottom: 10px;">Analysis Report:</h3>
+                            
+                            <p>Predicted Bacteria Species/Genera: <strong>{{ result }}</strong></p>
+                            
+                            
+                            
                             {% endif %}
-
+                            
                             <div class="services-details-desc">
-
-                                <h3>This classifier can detect 33 different bacteria species or genera.</h3>
-
+                                
+                                <h3>This classifier can detect 33 different bacteria species.</h3>
+                                
                                 <div class="services-details-features-list">
                                     <ul>
                                         <li><i class="flaticon-check-mark"></i> Acinetobacter.baumanii</li>
@@ -81,9 +82,9 @@
                             
                         </div>
                     </div>
-
+                    
                 </div>
             </div>
-        </section>
-        <!-- End Services Details Area -->
-{% endblock %}
+        </div>
+            <!-- End Services Details Area -->
+            {% endblock %}
